# llama-ner

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  config.yml
data/: sample.conll  test.conll
inference/: __init__.py  inference.py
models/: __init__.py  model_loader.py  peft_model.py  setup.py
utils/: __init__.py  data_loader.py  device.py  metrics.py  preprocess.py
